--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,8 +77,8 @@ dependencies {
 
     // Persistent storage room
     implementation "androidx.room:room-ktx:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-paging:2.5.0-alpha01"
     testImplementation "androidx.room:room-testing:$room_version"
@@ -101,19 +101,26 @@ dependencies {
     // Spotify
     implementation files("libs/spotify-app-remote-release-0.7.2.aar")
     implementation 'com.spotify.android:auth:1.2.5'
-    implementation "com.google.code.gson:gson:2.9.0"
     implementation 'androidx.browser:browser:1.4.0'
-    implementation "androidx.appcompat:appcompat:1.4.1"
+    implementation 'androidx.appcompat:appcompat:1.4.1'
 
-    implementation "junit:junit:4.13.2"
+    // Web services
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+    implementation 'com.squareup.moshi:moshi:1.12.0'
+    implementation 'com.squareup.moshi:moshi-kotlin:1.12.0'
+    implementation 'com.serjltt.moshi:moshi-lazy-adapters:2.2'
+    implementation 'com.google.code.gson:gson:2.9.0'
+
+    implementation 'junit:junit:4.13.2'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1'
-    testImplementation "org.mockito:mockito-core:4.4.0"
-    testImplementation "org.mockito.kotlin:mockito-kotlin:3.2.0"
+    testImplementation 'org.mockito:mockito-core:4.4.0'
+    testImplementation 'org.mockito.kotlin:mockito-kotlin:3.2.0'
     testImplementation 'org.mockito:mockito-inline:2.13.0'
     androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1'
-    androidTestImplementation "junit:junit:4.13.2"
-    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
-    androidTestImplementation "com.google.truth:truth:1.1.3"
+    androidTestImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.arch.core:core-testing:2.1.0'
+    androidTestImplementation 'com.google.truth:truth:1.1.3'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 }
