--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,10 +25,23 @@ android {
         }
     }
 
+    sourceSets {
+        androidTest {
+            java.srcDirs += "src/sharedTest/java"
+        }
+        test {
+            java.srcDirs += "src/sharedTest/java"
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+
+        debug {
+            minifyEnabled false
         }
     }
     compileOptions {
@@ -60,6 +73,7 @@ android {
                     '-opt-in=kotlinx.coroutines.ExperimentalCoroutinesApi',
             ]
         }
+
     }
 
 }
@@ -76,12 +90,14 @@ dependencies {
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.20.3"
 
     // Persistent storage room
-    implementation "androidx.room:room-ktx:$room_version"
-    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:2.5.0-alpha01"
+    implementation 'androidx.room:room-runtime:2.5.0-alpha01'
+    implementation 'androidx.test:core-ktx:1.4.0'
     kapt "androidx.room:room-compiler:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-paging:2.5.0-alpha01"
     testImplementation "androidx.room:room-testing:$room_version"
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
 
     // Koin main features for Android
     implementation "io.insert-koin:koin-android:$koin_version"
@@ -100,27 +116,35 @@ dependencies {
 
     // Spotify
     implementation files("libs/spotify-app-remote-release-0.7.2.aar")
-    implementation 'com.spotify.android:auth:1.2.5'
+    implementation 'com.spotify.android:auth:2.0.2'
     implementation 'androidx.browser:browser:1.4.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
 
     // Web services
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.13.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
-    implementation 'com.squareup.moshi:moshi:1.12.0'
-    implementation 'com.squareup.moshi:moshi-kotlin:1.12.0'
+    implementation 'com.squareup.moshi:moshi:1.13.0'
+    implementation 'com.squareup.moshi:moshi-kotlin:1.13.0'
     implementation 'com.serjltt.moshi:moshi-lazy-adapters:2.2'
     implementation 'com.google.code.gson:gson:2.9.0'
+    implementation 'io.coil-kt:coil:2.0.0-rc02'
+    implementation 'io.coil-kt:coil-compose:2.0.0-rc02'
+    implementation "androidx.datastore:datastore:1.0.0"
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+    testImplementation 'com.squareup.okhttp3:mockwebserver:5.0.0-alpha.6'
+    androidTestImplementation 'com.squareup.okhttp3:mockwebserver:5.0.0-alpha.6'
 
     implementation 'junit:junit:4.13.2'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1'
     testImplementation 'org.mockito:mockito-core:4.4.0'
-    testImplementation 'org.mockito.kotlin:mockito-kotlin:3.2.0'
-    testImplementation 'org.mockito:mockito-inline:2.13.0'
+    testImplementation 'org.mockito.kotlin:mockito-kotlin:4.0.0'
+    testImplementation 'org.mockito:mockito-inline:4.4.0'
     androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1'
     androidTestImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.arch.core:core-testing:2.1.0'
     androidTestImplementation 'com.google.truth:truth:1.1.3'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
+    androidTestImplementation "org.mockito:mockito-android:4.4.0"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 }
