--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
         kotlin_version = '1.6.10'
         room_version = '2.4.2'
         koin_version = '3.2.0-beta-1'
+        espresso_version = '3.4.0'
     }
     repositories {
         mavenCentral()
@@ -19,8 +20,7 @@ buildscript {
 plugins {
     id 'com.android.application' version '7.1.3' apply false
     id 'com.android.library' version '7.1.3' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.20' apply false
-    id 'com.android.dynamic-feature' version '7.1.3' apply false
+    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
 }
 
 task clean(type: Delete) {
