--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,6 +85,9 @@ android {
 
 dependencies {
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.20.3"
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0"
 
     // Persistent storage room
     kapt "androidx.room:room-compiler:$room_version"
@@ -131,6 +134,8 @@ dependencies {
     // Coil
     implementation 'io.coil-kt:coil:2.0.0-rc02'
     implementation 'io.coil-kt:coil-compose:2.0.0-rc02'
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    implementation "com.github.skydoves:landscapist-glide:1.5.1"
 
     // Datastore
     implementation "androidx.datastore:datastore:1.0.0"
