--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,8 @@ buildscript {
         room_version = '2.4.2'
         koin_version = '3.2.0-beta-1'
         espresso_version = '3.4.0'
+        media3_version = '1.0.0-alpha03'
+        jacocoVersion = '0.8.8'
     }
     repositories {
         mavenCentral()
@@ -12,15 +14,19 @@ buildscript {
         flatDir{
             dirs "libs"
         }
+
+        dependencies {
+            classpath 'com.android.tools.build:gradle:4.1.2'
+            classpath 'com.github.bjoernq:unmockplugin:0.7.9'
+        }
     }
-    dependencies {
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10'
-    }
-}// Top-level build file where you can add configuration options common to all sub-projects/modules.
+}
 plugins {
     id 'com.android.application' version '7.1.3' apply false
     id 'com.android.library' version '7.1.3' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id 'info.solidsoft.pitest' version '1.7.4' apply false
+    id 'pl.droidsonroids.pitest' version '0.2.9' apply false
 }
 
 task clean(type: Delete) {
