--- a/app/build.gradle
+++ b/app/build.gradle
@@ -149,6 +149,8 @@ dependencies {
     implementation "io.insert-koin:koin-android-compat:$koin_version"
     // Jetpack WorkManager
     implementation "io.insert-koin:koin-androidx-workmanager:$koin_version"
+    implementation "androidx.work:work-runtime-ktx:2.7.1"
+
     // Navigation Graph
     implementation "io.insert-koin:koin-androidx-navigation:$koin_version"
     // Jetpack Compose
@@ -163,7 +165,7 @@ dependencies {
     implementation 'com.spotify.android:auth:2.0.2'
     implementation 'androidx.browser:browser:1.4.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
-
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
     // Web services
     kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.13.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
